--- a/portfolio.html
+++ b/portfolio.html
@@ -65,108 +65,117 @@
 
                     <ul class="filter-list-section-ul list">
                         <li class="list-element">
-                            <img
-                                src="./images/portfolio/img-first.jpg"
-                                alt="laptop"
-                                width="370px"
-                                class="filter-list-img"
-                            />
+                            <div>
+                                <img
+                                    src="./images/portfolio/img-first.jpg"
+                                    alt="laptop"
+                                    class="filter-list-img"
+                                />
+                            </div>
                             <div class="filter-list-description">
                                 <h3>Технокряк</h3>
                                 <p>Веб-сайт</p>
                             </div>
                         </li>
                         <li class="list-element">
-                            <img
-                                src="./images/portfolio/img-second.jpg"
-                                alt="basketball poster New Orlean vs Golden Star"
-                                width="370px"
-                                class="filter-list-img"
-                            />
+                            <div>
+                                <img
+                                    src="./images/portfolio/img-second.jpg"
+                                    alt="basketball poster New Orlean vs Golden Star"
+                                    class="filter-list-img"
+                                />
+                            </div>
                             <div class="filter-list-description">
                                 <h3>Постер New Orlean vs Golden Star</h3>
                                 <p>Дизайн</p>
                             </div>
                         </li>
                         <li class="list-element">
-                            <img
-                                src="./images/portfolio/img-third.jpg"
-                                alt="seafood restaurant"
-                                width="370px"
-                                class="filter-list-img"
-                            />
+                            <div>
+                                <img
+                                    src="./images/portfolio/img-third.jpg"
+                                    alt="seafood restaurant"
+                                    class="filter-list-img"
+                                />
+                            </div>
                             <div class="filter-list-description">
                                 <h3>Ресторан Seafood</h3>
                                 <p>Приложение</p>
                             </div>
                         </li>
                         <li class="list-element">
-                            <img
-                                src="./images/portfolio/img-fourth.jpg"
-                                alt="headphones"
-                                width="370px"
-                                class="filter-list-img"
-                            />
+                            <div>
+                                <img
+                                    src="./images/portfolio/img-fourth.jpg"
+                                    alt="headphones"
+                                    class="filter-list-img"
+                                />
+                            </div>
                             <div class="filter-list-description">
                                 <h3>Проект Prime</h3>
                                 <p>Маркетинг</p>
                             </div>
                         </li>
                         <li class="list-element">
-                            <img
-                                src="./images/portfolio/img-fifth.jpg"
-                                alt="boxes"
-                                width="370px"
-                                class="filter-list-img"
-                            />
+                            <div>
+                                <img
+                                    src="./images/portfolio/img-fifth.jpg"
+                                    alt="boxes"
+                                    class="filter-list-img"
+                                />
+                            </div>
                             <div class="filter-list-description">
                                 <h3>Проект Boxes</h3>
                                 <p>Приложение</p>
                             </div>
                         </li>
                         <li class="list-element">
-                            <img
-                                src="./images/portfolio/img-sisth.jpg"
-                                alt="mac-pc"
-                                width="370px"
-                                class="filter-list-img"
-                            />
+                            <div>
+                                <img
+                                    src="./images/portfolio/img-sisth.jpg"
+                                    alt="mac-pc"
+                                    class="filter-list-img"
+                                />
+                            </div>
                             <div class="filter-list-description">
                                 <h3>Inspiration has no Borders</h3>
                                 <p>Веб-сайт</p>
                             </div>
                         </li>
                         <li class="list-element">
-                            <img
-                                src="./images/portfolio/img-seventh.jpg"
-                                alt="open book"
-                                width="370px"
-                                class="filter-list-img"
-                            />
+                            <div>
+                                <img
+                                    src="./images/portfolio/img-seventh.jpg"
+                                    alt="open book"
+                                    class="filter-list-img"
+                                />
+                            </div>
                             <div class="filter-list-description">
                                 <h3>Издание Limited Edition</h3>
                                 <p>Дизайн</p>
                             </div>
                         </li>
                         <li class="list-element">
-                            <img
-                                src="./images/portfolio/img-eighth.jpg"
-                                alt="sticker"
-                                width="370px"
-                                class="filter-list-img"
-                            />
+                            <div>
+                                <img
+                                    src="./images/portfolio/img-eighth.jpg"
+                                    alt="sticker"
+                                    class="filter-list-img"
+                                />
+                            </div>
                             <div class="filter-list-description">
                                 <h3>Проект LAB</h3>
                                 <p>Маркетинг</p>
                             </div>
                         </li>
                         <li class="list-element">
-                            <img
-                                src="./images/portfolio/img-ninth.jpg"
-                                alt="writing on laptop"
-                                width="370px"
-                                class="filter-list-img"
-                            />
+                            <div>
+                                <img
+                                    src="./images/portfolio/img-ninth.jpg"
+                                    alt="writing on laptop"
+                                    class="filter-list-img"
+                                />
+                            </div>
                             <div class="filter-list-description">
                                 <h3>Growing Business</h3>
                                 <p>Приложение</p>
