--- a/index.html
+++ b/index.html
@@ -229,9 +229,18 @@
                     </ul>
                 </div>
             </section>
+            <!-- =========================== Our Clients ================================ -->
             <section class="section">
                 <div class="container clients">
                     <h2 class="title">Постоянные клиенты</h2>
+                    <ul class="clients-list">
+                        <li><a href="#" class="clients-links icon-first"></a></li>
+                        <li><a href="#" class="clients-links icon-second"></a></li>
+                        <li><a href="#" class="clients-links icon-third"></a></li>
+                        <li><a href="#" class="clients-links icon-fourth"></a></li>
+                        <li><a href="#" class="clients-links icon-fifth"></a></li>
+                        <li><a href="#" class="clients-links icon-sixth"></a></li>
+                    </ul>
                 </div>
             </section>
         </main>
