--- a/portfolio.html
+++ b/portfolio.html
@@ -189,23 +189,34 @@
 
         <footer class="footer-section section">
             <div class="container footer-section-container">
-                <a href="#" class="footer-logo"><span>Web</span>Studio</a>
-                <address class="address-link">
-                    <a
-                        href="https://www.google.com.ua/maps/"
-                        target="_blank"
-                        class="link current-address"
-                        >г. Киев, пр-т Леси Украинки, 26</a
-                    >
-                    <a
-                        href="mailto:info@devstudio.com"
-                        class="address-section address-section-opacity"
-                        >info@devstudio.com</a
-                    >
-                    <a href="tel:+380961111111" class="address-section address-section-opacity"
-                        >+38 096 111 11 11</a
-                    >
-                </address>
+                <div>
+                    <a href="#" class="footer-logo"><span>Web</span>Studio</a>
+                    <address class="address-link">
+                        <a
+                            href="https://www.google.com.ua/maps/"
+                            target="_blank"
+                            class="link current-address"
+                            >г. Киев, пр-т Леси Украинки, 26</a
+                        >
+                        <a
+                            href="mailto:info@devstudio.com"
+                            class="address-section address-section-opacity"
+                            >info@devstudio.com</a
+                        >
+                        <a href="tel:+380961111111" class="address-section address-section-opacity"
+                            >+38 096 111 11 11</a
+                        >
+                    </address>
+                </div>
+                <div class="footer-sotial-links">
+                    <h2 class="footer-section-title">Присоединяйтесь</h2>
+                    <ul class="footer-section-list">
+                        <li><a href="#" class="footer-section-links insta"></a></li>
+                        <li><a href="#" class="footer-section-links twitter"></a></li>
+                        <li><a href="#" class="footer-section-links facebook"></a></li>
+                        <li><a href="#" class="footer-section-links linkedin"></a></li>
+                    </ul>
+                </div>
             </div>
         </footer>
     </body>
