--- a/portfolio.html
+++ b/portfolio.html
@@ -26,25 +26,35 @@
         <header class="section section-header">
             <div class="container header">
                 <nav class="site-nav">
-                    <a href="#" class="main-logo"><span>Web</span>Studio</a>
+                    <a href="##" class="main-logo"><span>Web</span>Studio</a>
 
                     <ul class="site-nav-ul list">
-                        <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                        <li class="item"><a href="./index.html" class="link current">Студия</a></li>
                         <li class="item">
-                            <a href="./portfolio.html" class="link current">Портфолио</a>
+                            <a href="./portfolio.html" class="link">Портфолио</a>
                         </li>
                         <li class="item"><a href="" class="link">Контакты</a></li>
                     </ul>
 
-                    <ul class="list">
+                    <ul class="list list-address">
                         <li class="item">
-                            <a href="mailto:info@devstudio.com" class="address-section"
-                                >info@devstudio.com</a
+                            <a
+                                href="mailto:info@devstudio.com"
+                                class="address-section address-icon"
+                            >
+                                <svg class="icon-mail" width="16" height="14">
+                                    <use href="./images/sprite.svg#icon-icon-mail"></use>
+                                </svg>
+
+                                info@devstudio.com</a
                             >
                         </li>
                         <li class="item">
-                            <a href="tel:+380961111111" class="address-section"
-                                >+38 096 111 11 11</a
+                            <a href="tel:+380961111111" class="address-section address-icon"
+                                ><svg class="icon-mail" width="16" height="16">
+                                    <use href="./images/sprite.svg#icon-icon-phone"></use>
+                                </svg>
+                                +38 096 111 11 11</a
                             >
                         </li>
                     </ul>
@@ -190,7 +200,7 @@
         <footer class="footer-section section">
             <div class="container footer-section-container">
                 <div>
-                    <a href="#" class="footer-logo"><span>Web</span>Studio</a>
+                    <a href="##" class="footer-logo"><span>Web</span>Studio</a>
                     <address class="address-link">
                         <a
                             href="https://www.google.com.ua/maps/"
@@ -211,10 +221,34 @@
                 <div class="footer-sotial-links">
                     <h2 class="footer-section-title">Присоединяйтесь</h2>
                     <ul class="footer-section-list">
-                        <li><a href="#" class="footer-section-links insta"></a></li>
-                        <li><a href="#" class="footer-section-links twitter"></a></li>
-                        <li><a href="#" class="footer-section-links facebook"></a></li>
-                        <li><a href="#" class="footer-section-links linkedin"></a></li>
+                        <li>
+                            <a href="##" class="footer-section-links"
+                                ><svg class="icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="##" class="footer-section-links"
+                                ><svg class="icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="##" class="footer-section-links"
+                                ><svg class="icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="##" class="footer-section-links"
+                                ><svg class="icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
