--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <ul class="whatdoing-ul list">
                         <li class="item">
                             <div class="icon-container">
-                                <svg class="icon-details" width="70" height="70">
+                                <svg width="70" height="70">
                                     <use href="./images/sprite.svg#icon-icon-detail"></use>
                                 </svg>
                             </div>
@@ -91,7 +91,7 @@
 
                         <li class="item icon-watch">
                             <div class="icon-container">
-                                <svg class="icon-details" width="70" height="70">
+                                <svg width="70" height="70">
                                     <use href="./images/sprite.svg#icon-icon-watch"></use>
                                 </svg>
                             </div>
@@ -104,7 +104,7 @@
 
                         <li class="item icon-diagram">
                             <div class="icon-container">
-                                <svg class="icon-details" width="70" height="70">
+                                <svg width="70" height="70">
                                     <use href="./images/sprite.svg#icon-icon-diagram"></use>
                                 </svg>
                             </div>
@@ -117,7 +117,7 @@
 
                         <li class="item icon-astronaut">
                             <div class="icon-container">
-                                <svg class="icon-details" width="70" height="70">
+                                <svg width="70" height="70">
                                     <use href="./images/sprite.svg#icon-icon-astronaut"></use>
                                 </svg>
                             </div>
@@ -405,28 +405,28 @@
                     <ul class="footer-section-list">
                         <li>
                             <a href="##" class="footer-section-links"
-                                ><svg class="icon" width="20" height="20">
+                                ><svg class="icon-footer" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="##" class="footer-section-links"
-                                ><svg class="icon" width="20" height="20">
+                                ><svg class="icon-footer" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="##" class="footer-section-links"
-                                ><svg class="icon" width="20" height="20">
+                                ><svg class="icon-footer" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="##" class="footer-section-links"
-                                ><svg class="icon" width="20" height="20">
+                                ><svg class="icon-footer" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
