--- a/portfolio.html
+++ b/portfolio.html
@@ -29,9 +29,9 @@
                     <a href="##" class="main-logo"><span>Web</span>Studio</a>
 
                     <ul class="site-nav-ul list">
-                        <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+                        <li class="item"><a href="./index.html" class="link">Студия</a></li>
                         <li class="item">
-                            <a href="./portfolio.html" class="link">Портфолио</a>
+                            <a href="./portfolio.html" class="link current">Портфолио</a>
                         </li>
                         <li class="item"><a href="" class="link">Контакты</a></li>
                     </ul>
@@ -223,28 +223,28 @@
                     <ul class="footer-section-list">
                         <li>
                             <a href="##" class="footer-section-links"
-                                ><svg class="icon" width="20" height="20">
+                                ><svg class="icon-footer" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="##" class="footer-section-links"
-                                ><svg class="icon" width="20" height="20">
+                                ><svg class="icon-footer" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="##" class="footer-section-links"
-                                ><svg class="icon" width="20" height="20">
+                                ><svg class="icon-footer" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="##" class="footer-section-links"
-                                ><svg class="icon" width="20" height="20">
+                                ><svg class="icon-footer" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
